// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form HTML test 1`] = `
<form
  action="#"
>
  <div>
    <label>
      field_1
    </label>
    <input />
  </div>
  <div>
    <label>
      field_2
    </label>
    <input />
  </div>
  <div>
    <label>
      field_3
    </label>
    <input />
  </div>
</form>
`;

exports[`Form field HTML test 1`] = `
<div>
  <label>
    field_1
  </label>
  <input />
</div>
`;

exports[`Form field HTML test 2`] = `
<div>
  <label>
    field_1
  </label>
  <input />
</div>
`;
